# Augment-Code-free

./: .gitignore  AugmentFree.spec  CHANGELOG.md  README.md  README_EN.md  RELEASE_NOTES_v1.2.3.md  build.bat  build.py  build.sh  main.py  pyproject.toml  requirements.txt  run.py  run_admin.py  setup.py
.github/workflows/: auto-release.yml  build-and-release.yml  build.yml
scripts/: build.py  prepare-release.py  release.bat  release.py
src/augment_free/: __init__.py  main.py
src/augment_free.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/augment_free/api/: core.py
src/augment_free/api/handlers/: __init__.py  automation.py  database.py  jetbrains.py  telemetry.py  workspace.py
src/augment_free/translations/: en_US.json  zh_CN.json
src/augment_free/utils/: __init__.py  ide_detector.py  operation_reporter.py  paths.py  paths_old.py  session_manager.py  translation.py
src/augment_free/web/: index.html
src/augment_free/web/css/: style.css
src/augment_free/web/js/: app.js
