[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augment-free"
version = "1.2.3"
description = "Free AugmentCode - A tool for cleaning AugmentCode related data with modern GUI (Modified by UntaDotMy)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "vagmr"},
    { name = "UntaDotMy", email = "42847931+UntaDotMy@users.noreply.github.com"}
]
keywords = ["augmentcode", "vscode", "telemetry", "cleaner", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pywebview>=4.4.0",
    "jinja2>=3.1.0",
    "pyinstaller>=6.14.1",
    "pillow>=11.2.1",
    "psutil>=5.9.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
build = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
augment-free = "augment_free.main:main"

[project.urls]
Homepage = "https://github.com/UntaDotMy/Augment-Code-free"
Repository = "https://github.com/UntaDotMy/Augment-Code-free"
Issues = "https://github.com/UntaDotMy/Augment-Code-free/issues"
Original = "https://github.com/vagmr/Augment-Code-free"

[tool.setuptools]
packages = ["augment_free"]
package-dir = {"" = "src"}

[tool.hatch.build.targets.wheel]
packages = ["src/augment_free"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
